--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1,7 +1,7 @@
 <!--SDC Datasets Access Request Dialogbox-->
 <div *ngIf="mailType == 'Access Request Mail' && datasetName != 'CVP'">
   <h4 mat-dialog-title>SDC Data Access Request Form</h4>
-  <hr>
+  <hr />
   <mat-dialog-content>
     <p>
       Please fill out the following information to obtain access to the data
@@ -82,7 +82,7 @@
         <strong>sdc-support@dot.gov</strong>
       </p>
     </div>
-    <hr>
+    <hr />
     <h5 style="font-size: 16px; padding-top: 10px">
       Geographic Extent of Access
     </h5>
@@ -102,7 +102,7 @@
     <p style="margin-top: -15px; color: #a09e9e; font-size: 12px">
       use commas when requesting multiple states (e.g. KN, VI)
     </p>
-    <hr>
+    <hr />
     <mat-checkbox
       [(ngModel)]="agreed"
       [disabled]="
@@ -124,7 +124,7 @@
       account for the site and associated data in those accounts.
     </p>
   </mat-dialog-content>
-  <hr>
+  <hr />
   <mat-dialog-actions>
     <button
       class="btn btn-primary dotBtn"
@@ -209,7 +209,7 @@
 <!--Publish Dataset / Algorithm Request Dialogbox-->
 <div *ngIf="mailType == 'Dataset publish Mail'">
   <h4 mat-dialog-title>Publish Dataset / Algorithm Request</h4>
-  <hr>
+  <hr />
   <mat-dialog-content>
     <mat-form-field style="width: 100%">
       <mat-select placeholder="Type" [(ngModel)]="messageModel.type">
@@ -328,7 +328,7 @@
       >
     </mat-form-field>
   </mat-dialog-content>
-  <hr>
+  <hr />
   <mat-dialog-actions>
     <span *ngIf="messageModel.type == 'dataset'">
       <button
@@ -370,14 +370,14 @@
 <!--Request Export Dataset Dialogbox-->
 <div *ngIf="mailType == 'Dataset export Mail'">
   <h3 mat-dialog-title>Request to Export Data</h3>
-  <hr>
+  <hr />
   <mat-tab-group
     [selectedIndex]="selectedIndex"
     (selectedIndexChange)="selectedIndexChange($event)"
   >
     <mat-tab label="Select Project" #tab1>
       <mat-dialog-content style="height: 100%">
-        <hr>
+        <hr />
         <p>
           <b
             >Please select the Project, Data Provider, and the primary
@@ -456,7 +456,7 @@
             >Please select Sub DataSet Type
           </mat-error>
         </mat-form-field>
-        <hr>
+        <hr />
         <mat-dialog-actions>
           <button
             class="btn btn-primary dotBtn request-exportCancelBtn"
@@ -479,21 +479,24 @@
           >&nbsp;
         </mat-dialog-actions>
       </mat-dialog-content>
-      <hr>
+      <hr />
     </mat-tab>
 
     <mat-tab label="Approval Form" #tab2 [disabled]="selectedIndex == 0">
       <mat-dialog-content>
-        <hr>
+        <hr />
         <br />
-        <p><b>
+        <p>
+          <b>
             Please provide additional information pertaining to your request for
-            exporting data, by filling out the fields below. These details will be
-            shared with the Data Provider to help them review your request and
-            provide their decision.</b></p>
+            exporting data, by filling out the fields below. These details will
+            be shared with the Data Provider to help them review your request
+            and provide their decision.</b
+          >
+        </p>
         <br />
         <label style="float: right"> * All fields are mandatory </label>
-        <hr>
+        <hr />
       </mat-dialog-content>
       <!-- Approval Form - Non-Trusted Status -->
       <mat-dialog-content *ngIf="!trustedStatus">
@@ -588,7 +591,7 @@
           >
         </mat-form-field>
 
-        <hr>
+        <hr />
         <br />
         <p-panel header="Acceptable Use Policy">
           <div
@@ -631,7 +634,7 @@
           </div>
         </div>
 
-        <hr>
+        <hr />
         <mat-dialog-actions>
           <button
             class="btn btn-primary dotBtn request-exportCancelBtn"
@@ -725,7 +728,7 @@
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
         </mat-form-field> -->
 
-        <hr>
+        <hr />
         <p-panel header="Acceptable Use Policy">
           <div
             class="panel-div"
@@ -745,7 +748,7 @@
         </p-panel>
         <br />
 
-        <hr>
+        <hr />
         <mat-dialog-actions>
           <button
             class="btn btn-primary dotBtn request-exportCancelBtn"
@@ -777,21 +780,22 @@
       [disabled]="selectedIndex != 2"
       *ngIf="trustedStatus"
     >
-      <mat-dialog-content>    
-      <hr>
-      <p>
-        <b
-          >Auto-Export is a feature that allows data analysts to export their
-          derived data or analysis products automatically. It avoids the need to
-          manually request exports many times for a similar type of export (as a
-          trusted user). Data analysts must request access to this feature for
-          specific types of exports from data providers. At any point after
-          approval, the data provider may revoke this permission. The trusted
-          status associated with access to the auto-export functionality is
-          given per Project, Data Provider, and Per Sub-Dataset/Datatype.</b
-        >
-      </p>
-      <br />
+      <mat-dialog-content>
+        <hr />
+        <p>
+          <b
+            >Auto-Export is a feature that allows data analysts to export their
+            derived data or analysis products automatically. It avoids the need
+            to manually request exports many times for a similar type of export
+            (as a trusted user). Data analysts must request access to this
+            feature for specific types of exports from data providers. At any
+            point after approval, the data provider may revoke this permission.
+            The trusted status associated with access to the auto-export
+            functionality is given per Project, Data Provider, and Per
+            Sub-Dataset/Datatype.</b
+          >
+        </p>
+        <br />
       </mat-dialog-content>
 
       <mat-dialog-content *ngIf="!trustedStatus">
@@ -879,18 +883,18 @@
         >
           CANCEL
         </button>
-      <div>
-        <button
-          class="btn btn-primary dotBtn request-exportSubmitBtn"
-          [disabled]="
-            (!messageModel.autoderiveddataset || !messageModel.autoreason) &&
-            autoExportRequestSelected
-          "
-          (click)="submitRequest()"
-        >
-          SUBMIT
-        </button>
-      </div>
+        <div>
+          <button
+            class="btn btn-primary dotBtn request-exportSubmitBtn"
+            [disabled]="
+              (!messageModel.autoderiveddataset || !messageModel.autoreason) &&
+              autoExportRequestSelected
+            "
+            (click)="submitRequest()"
+          >
+            SUBMIT
+          </button>
+        </div>
         <button
           class="btn btn-primary dotBtn request-exportPreviousBtn"
           (click)="onPreviousBtnClick()"
@@ -906,7 +910,7 @@
 <div *ngIf="mailType == 'Request Trusted Status Mail'">
   <h3 mat-dialog-title>Request Trusted User Status</h3>
   <mat-dialog-content style="height: 100%">
-    <hr>
+    <hr />
     <p>
       <b
         >Trusted Status is a mechanism to help speed the turnaround of future,
@@ -924,7 +928,7 @@
     </p>
     <br />
     <label style="float: right"> * All fields are mandatory </label>
-    <hr>
+    <hr />
 
     <mat-form-field style="width: 100%">
       <mat-select
@@ -1006,7 +1010,7 @@
       </mat-form-field>
     </div>
     <br />
-    <hr>
+    <hr />
 
     <p-panel header="Acceptable Use Policy">
       <div
@@ -1038,7 +1042,7 @@
         </div>
       </div>
     </div>
-    <hr>
+    <hr />
     <mat-dialog-actions>
       <button
         class="btn btn-primary dotBtn request-exportCancelBtn"
@@ -1079,7 +1083,7 @@
     </p>
     <!--br/-->
     <label style="float: right"> * All fields are mandatory </label>
-    <hr>
+    <hr />
     <br />
     <p>
       <b
@@ -1236,7 +1240,7 @@
     <div style="line-height: 100%">
       <br />
     </div>
-    <hr>
+    <hr />
 
     <p-panel header="Acceptable Use Policy">
       <div
@@ -1268,7 +1272,7 @@
         </div>
       </div>
     </div>
-    <hr>
+    <hr />
     <mat-dialog-actions>
       <button
         class="btn btn-primary dotBtn request-exportCancelBtn"
@@ -1301,23 +1305,24 @@
 <!-- Manage Workstation -->
 <!-- ngIf to render the dialog only when data.mailType is resize -->
 <div *ngIf="mailType === 'reSize Request'">
-  <h3  mat-dialog-title>{{ getTabHeading() }}</h3>
-  <hr>
+  <h3 mat-dialog-title>{{ getTabHeading() }}</h3>
+  <hr />
   <mat-tab-group
     [selectedIndex]="selectedIndex"
     (selectedIndexChange)="selectedIndexChange($event)"
   >
-  <!--TAB1 - manage workstation-->
+    <!--TAB1 - manage workstation-->
     <mat-tab label="Manage Workstation" #tab1>
       <mat-dialog-content style="height: 100%">
-        <hr>
+        <hr />
         <p>
           <b>
-            Please select from the below option(s) which are currently available for managing
-            your workstation. The corresponding workflow will then activate.
+            Please select from the below option(s) which are currently available
+            for managing your workstation. The corresponding workflow will then
+            activate.
           </b>
         </p>
-        <hr>
+        <hr />
         <div class="manage-selection-container">
           <div class="resize-filter-start-workspace">
             <mat-checkbox [(ngModel)]="resizeWorkSpaceOnly"></mat-checkbox>
@@ -1332,7 +1337,7 @@
             </span>
           </div>
           <div>
-            <p style="margin-left: 50px; padding-bottom: 10 px;  font-size: 85%;">
+            <p style="margin-left: 50px; padding-bottom: 10 px; font-size: 85%">
               <b>
                 <i>Please shut down your workstation before resizing.</i>
               </b>
@@ -1353,13 +1358,15 @@
               <i class="material-icons"> info </i>
             </span>
           </div>
-          <div  style="display: none" class="resize-filter-start-workspace">
+          <div style="display: none" class="resize-filter-start-workspace">
             <mat-checkbox
               [(ngModel)]="scheduleUpTime"
               [matTooltipPosition]="'above'"
               matTooltip="{{ getScheduleUptimeTooltip() }}"
             ></mat-checkbox>
-            <p style="padding: 10px 0 0 10px"><b> Schedule Workstation UpTime </b></p>
+            <p style="padding: 10px 0 0 10px">
+              <b> Schedule Workstation UpTime </b>
+            </p>
             <span
               [matTooltipPosition]="'above'"
               matTooltip="Schedule your workstation to keep it running during SDC daily instance shutdown process"
@@ -1388,7 +1395,7 @@
       [disabled]="selectedIndex == 0 || !resizeWorkSpaceOnly"
     >
       <mat-dialog-content style="height: 100%">
-        <hr>
+        <hr />
         <p>
           <b>
             Your current workstation configuration is
@@ -1398,8 +1405,12 @@
         </p>
         <div>
           <b>
-            Please submit your desired CPU and RAM to retrieve available instance type(s).
-            <span [matTooltipPosition]="'above'"  matTooltip="Schedule and resize your default workstation with extra CPU and Memory">
+            Please submit your desired CPU and RAM to retrieve available
+            instance type(s).
+            <span
+              [matTooltipPosition]="'above'"
+              matTooltip="Schedule and resize your default workstation with extra CPU and Memory"
+            >
               <i class="material-icons"> info </i>
             </span>
             For pricing related details
@@ -1410,13 +1421,14 @@
             >.</b
           >
           <p>
-            <br>
+            <br />
             <i
               >Note: Make sure your work is saved and your workstation is
-              stopped before requesting a resize.</i>
+              stopped before requesting a resize.</i
+            >
           </p>
         </div>
-        <hr>
+        <hr />
         <div class="resize-form-container">
           <div class="resize-filters-section">
             <div>
@@ -1578,7 +1590,7 @@
       [disabled]="selectedIndex == 0 || selectedIndex == 1 || !scheduleUpTime"
     >
       <mat-dialog-content style="height: 100%">
-        <hr>
+        <hr />
         <p>
           <b
             ><span
@@ -1595,7 +1607,7 @@
             request is completed.</b
           >
         </p>
-        <hr>
+        <hr />
         <p>
           <b> Schedule Workstation UpTime </b>
         </p>
@@ -1611,7 +1623,7 @@
                 [min]="systemDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
@@ -1626,7 +1638,7 @@
                 [(ngModel)]="uptimeToDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker2"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker2></mat-datepicker>
@@ -1661,7 +1673,7 @@
       "
     >
       <mat-dialog-content style="height: 100%">
-        <hr>
+        <hr />
         <p>
           <b
             >Please specify additional disk space that should be added to the
@@ -1674,7 +1686,7 @@
             <i class="material-icons"> info </i>
           </span>
         </p>
-        <hr>
+        <hr />
         <p>
           <b> Selected Desired Diskspace </b>
         </p>
@@ -1712,7 +1724,7 @@
       [disabled]="selectedIndex != 3"
     >
       <mat-dialog-content>
-        <hr>
+        <hr />
         <p>
           <b
             >Please select the schedule between what dates you would want the
@@ -1721,7 +1733,7 @@
           >
         </p>
 
-        <hr>
+        <hr />
         <div *ngIf="!(!resizeWorkSpaceOnly && !ManageBoth)">
           <p>
             <b> Workspace resize schedule </b>
@@ -1736,7 +1748,7 @@
                 [min]="systemDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
@@ -1751,14 +1763,14 @@
                 [(ngModel)]="workSpaceToDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker2"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker2></mat-datepicker>
             </mat-form-field>
             <div style="width: 10%"></div>
           </div>
-          <hr>
+          <hr />
         </div>
         <div *ngIf="!(!resizeAddDiskOnly && !ManageBoth)">
           <p>
@@ -1774,7 +1786,7 @@
                 [min]="systemDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker3"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker3></mat-datepicker>
@@ -1789,7 +1801,7 @@
                 [min]="diskSpaceFromDate"
               />
               <mat-datepicker-toggle
-                matSuffix
+                matIconSuffix
                 [for]="picker4"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker4></mat-datepicker>
