Fixed rest of screenshots

--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -94,11 +94,11 @@
                         <ul class = "outside">
                             <span>
                                 <li class="push-top-30" > Once you are logged in, click on 'DATASETS’ in the top menu.</li>
-                                <img src="../../assets/images/faq_image/Dataset-1.png" class="mx-auto d-block width-70" id="img-highlight">
+                                <img src="../../assets/images/faq_image/Dataset-1.PNG" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
                                 <li class="push-top-30" >Expand the ‘SDC Datasets’ panel. Below this you can see all available datasets.</li>
-                                <img src="../../assets/images/faq_image/Dataset-2.png" class="mx-auto d-block width-70" id="img-highlight">
+                                <img src="../../assets/images/faq_image/Dataset-2.PNG" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
                                 <li class="push-top-30">To access a given Dataset, click on 'Request'.</li>
