--- a/webportal/webapp/src/app/main/faq/faq.component.html
+++ b/webportal/webapp/src/app/main/faq/faq.component.html
@@ -28,11 +28,11 @@
                         </span>
                         <span>
                             <li class="push-top-30">Go to ‘Register/Login’  menu tab</li>
-                            <img src="../../assets/images/faq_image/SignUp-1.png" class="mx-auto d-block width-70">
+                            <img src="../../assets/images/faq_image/SignUp-1.PNG" class="mx-auto d-block width-70" id="img-highlight">
                         </span>
                         <span>
                             <li class="push-top-30">Download the access request form, fill out the required details, and send the form by email to sdc-support@dot.gov</li>
-                            <img src="../../assets/images/faq_image/SignUp-2.png" class="mx-auto d-block width-70">
+                            <img src="../../assets/images/faq_image/SignUp-2.PNG" class="mx-auto d-block width-70" id="img-highlight">
                         </span>
                         <!-- <span>
                             <li class="push-top-30">Once approved, support team will send you an email with the instructions for accessing the platform.</li>
