Fixed issue where dataset descriptions were not showing up

--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -390,7 +390,7 @@
           >
           <hr />
           <mat-card-content style="max-height: 400px; overflow: scroll">
-            <markdown [data]="dictionary" (ready)="onReady()"></markdown>
+            <markdown [data]="dictionary"></markdown>
           </mat-card-content>
         </mat-card>
       </div>
